CHANGES IN VERSION 0.0.70
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o All exported functions now have aliases with underscore names for those
        that prefer them over camel case names. For example, analyze_chr() is
        the new alias for analyzeChr().


CHANGES IN VERSION 0.0.69
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o loadCoverage() and fullCoverage() now have a 'tilewidth' argument. When
        specified GenomicFiles is used to read the coverage in chunks. In 
        theory, this can lead to lower memory usage at the expense of time.
        
CHANGES IN VERSION 0.0.67
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o preprocessCoverage() now has a 'toMatrix' argument which is only used when
        'lowMemDir' is not NULL. It controls whether to save the chunks as
        DataFrame objects or dgCMatrix objects and the idea is that it can time
        by just transforming the data once instead of doing so at each
        permutation.

CHANGES IN VERSION 0.0.66
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o fstats.apply() has been moved to it's own package: derfinderHelper. This
        will speed up the run time when using BiocParallel::SnowParam() as
        derfinderHelper takes much less time to load than derfinder.
    o plotCluster(), plotOverview() and plotRegionCoverage() were all moved to
        their new own package: derfinderPlot. This will make maintenance easier
        as the dependency ggbio is still under active development.



CHANGES IN VERSION 0.0.65
-------------------------

    o Re-organized code for fstats.apply(). Note that improving 
        .transformSparseMatrix() would speed up the 'Matrix' method.
    o Note that all parallel functions have some overhead from loading derfinder
        on each worker. Check system.time(library(derfinder)) to see how long
        the overhead is. It only pays off to use more cores if the calculations