@@ -26,16 +26,16 @@ export(get_region_coverage)
 export(get_segments_rle)
 export(loadCoverage)
 export(load_coverage)
-export(makeBamList)
 export(makeGenomicState)
 export(makeModels)
-export(make_bam_list)
 export(make_genomic_state)
 export(make_models)
 export(mergeResults)
 export(merge_results)
 export(preprocessCoverage)
 export(preprocess_coverage)
+export(rawFiles)
+export(raw_files)
 export(regionMatrix)
 export(region_matrix)
 export(sampleDepth)
