@@ -2,7 +2,7 @@
 #'
 #' Fast differential expression analysis of RNA-seq data at base-pair 
 #' resolution from multiple samples. The analysis pipeline involves loading the 
-#' sample BAM files using \link{makeBamList} and \link{loadCoverage}, 
+#' sample BAM files using \link{rawFiles} and \link{loadCoverage}, 
 #' pre-processing the data by using \link{preprocessCoverage}, calculating the 
 #' F-statistics (while adjusting for some confounders) using \link{makeModels} 
 #' and \link{calculateStats}, calculating the p-values and finding the regions 
